--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,8 @@
         </configuration>
       </plugin>
 
+      <!--
+      FIXME waiting for Retrotranslator 1.2.4 to get deployed on central
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.1</version>
@@ -140,7 +142,7 @@
             <groupId>net.sf.retrotranslator</groupId>
             <artifactId>retrotranslator-transformer</artifactId>
             <version>1.2.4</version>
-            <scope>system</scope> <!-- not deployed on central yet -->
+            <scope>system</scope>
             <systemPath>
                   ${basedir}/lib/retrotranslator-transformer-1.2.4.jar
                 </systemPath>
@@ -178,7 +180,7 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
+      </plugin> -->
     </plugins>
   </build>
 
