--- a/pom.xml
+++ b/pom.xml
@@ -74,19 +74,19 @@
   <build>
     <plugins>
       <!-- TODO : investigate OSGi support
-      <plugin>
+        <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>1.2.0</version>
         <extensions>true</extensions>
         <configuration>
-          <excludeDependencies>true</excludeDependencies>
-          <instructions>
-            <Bundle-SymbolicName>org.apache.commons.monitoring</Bundle-SymbolicName>
-            <Export-Package>org.apache.commons.monitoring;version=${project.version}</Export-Package>
-          </instructions>
+        <excludeDependencies>true</excludeDependencies>
+        <instructions>
+        <Bundle-SymbolicName>org.apache.commons.monitoring</Bundle-SymbolicName>
+        <Export-Package>org.apache.commons.monitoring;version=${project.version}</Export-Package>
+        </instructions>
         </configuration>
-      </plugin>
+        </plugin>
       -->
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
@@ -100,87 +100,81 @@
       </plugin>
 
       <!--
-      FIXME waiting for Retrotranslator 1.2.4 to get deployed on central
-      <plugin>
+        FIXME waiting for Retrotranslator 1.2.4 to get deployed on central
+        <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.1</version>
         <executions>
-          <execution>
-            <id>backport</id>
-            <phase>package</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <mkdir dir="${basedir}/target/backport" />
-                <java classname="net.sf.retrotranslator.transformer.Retrotranslator" failonerror="true">
-                  <classpath>
-                    <path refid="maven.plugin.classpath" />
-                    <path refid="maven.compile.classpath" />
-                  </classpath>
-                  <arg value="-smart" />
-                  <arg value="-srcdir" />
-                  <arg value="${basedir}/target/classes" />
-                  <arg value="-destdir" />
-                  <arg value="${basedir}/target/backport" />
-                  <arg value="-target" />
-                  <arg value="1.3" />
-                  <arg value="-backport" />
-                  <arg
-                    value="java.util.concurrent:edu.emory.mathcs.backport.java.util.concurrent;
-  java.lang.System.nanoTime:edu.emory.mathcs.backport.java.util.concurrent.helpers.Utils.nanoTime;
-  java.lang.StringBuilder:java.lang.StringBuffer;
-  org.apache.commons.monitoring.support.java13;" />
-                </java>
-              </tasks>
-            </configuration>
-          </execution>
+        <execution>
+        <id>backport</id>
+        <phase>package</phase>
+        <goals>
+        <goal>run</goal>
+        </goals>
+        <configuration>
+        <tasks>
+        <mkdir dir="${basedir}/target/backport" />
+        <java classname="net.sf.retrotranslator.transformer.Retrotranslator" failonerror="true">
+        <classpath>
+        <path refid="maven.plugin.classpath" />
+        <path refid="maven.compile.classpath" />
+        </classpath>
+        <arg value="-smart" />
+        <arg value="-srcdir" />
+        <arg value="${basedir}/target/classes" />
+        <arg value="-destdir" />
+        <arg value="${basedir}/target/backport" />
+        <arg value="-target" />
+        <arg value="1.3" />
+        <arg value="-backport" />
+        <arg
+        value="java.util.concurrent:edu.emory.mathcs.backport.java.util.concurrent;
+        java.lang.System.nanoTime:edu.emory.mathcs.backport.java.util.concurrent.helpers.Utils.nanoTime;
+        java.lang.StringBuilder:java.lang.StringBuffer;
+        org.apache.commons.monitoring.support.java13;" />
+        </java>
+        </tasks>
+        </configuration>
+        </execution>
         </executions>
         <dependencies>
-          <dependency>
-            <groupId>net.sf.retrotranslator</groupId>
-            <artifactId>retrotranslator-transformer</artifactId>
-            <version>1.2.4</version>
-            <scope>system</scope>
-            <systemPath>
-                  ${basedir}/lib/retrotranslator-transformer-1.2.4.jar
-                </systemPath>
-          </dependency>
-          <dependency>
-            <groupId>net.sf.retrotranslator</groupId>
-            <artifactId>retrotranslator-runtime</artifactId>
-            <version>1.2.4</version>
-            <scope>system</scope>
-            <systemPath>
-                  ${basedir}/lib/retrotranslator-runtime-1.2.4.jar
-                </systemPath>
-          </dependency>
-          <dependency>
-            <groupId>backport-util-concurrent</groupId>
-            <artifactId>backport-util-concurrent</artifactId>
-            <version>3.1</version>
-          </dependency>
+        <dependency>
+        <groupId>net.sf.retrotranslator</groupId>
+        <artifactId>retrotranslator-transformer</artifactId>
+        <version>1.2.4</version>
+        <scope>system</scope>
+        </dependency>
+        <dependency>
+        <groupId>net.sf.retrotranslator</groupId>
+        <artifactId>retrotranslator-runtime</artifactId>
+        <version>1.2.4</version>
+        <scope>system</scope>
+        </dependency>
+        <dependency>
+        <groupId>backport-util-concurrent</groupId>
+        <artifactId>backport-util-concurrent</artifactId>
+        <version>3.1</version>
+        </dependency>
         </dependencies>
-      </plugin>
-      <plugin>
+        </plugin>
+        <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2-beta-1</version>
         <executions>
-          <execution>
-            <id>backport</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attached</goal>
-            </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>src/assembly/backport.xml</descriptor>
-              </descriptors>
-            </configuration>
-          </execution>
+        <execution>
+        <id>backport</id>
+        <phase>package</phase>
+        <goals>
+        <goal>attached</goal>
+        </goals>
+        <configuration>
+        <descriptors>
+        <descriptor>src/assembly/backport.xml</descriptor>
+        </descriptors>
+        </configuration>
+        </execution>
         </executions>
-      </plugin> -->
+        </plugin> -->
     </plugins>
   </build>
 
@@ -197,5 +191,17 @@
     <maven.compile.source>1.5</maven.compile.source>
     <maven.compile.target>1.5</maven.compile.target>
   </properties>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <configuration>
+            <targetJdk>1.5</targetJdk>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 
 </project>
