Add a description to pom (for the summary page), fix the logo location and add license header to proposal
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@618501 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
   <name>Commons Monitoring (Sandbox)</name>
   <url>http://commons.apache.org/sandbox/monitoring/</url>
   <inceptionYear>2008</inceptionYear>
+  <description>
+    Monitoring provides a simple, lightweight toolkit to instrument java application monitoring capabilities, including performances and thread concurrency.
+  </description>
 
   <dependencies>
     <dependency>
