--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-sandbox-parent</artifactId>
-    <version>3</version>
+    <version>4</version>
   </parent>
   <artifactId>commons-monitoring</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -181,6 +181,8 @@
   <properties>
     <maven.compile.source>1.5</maven.compile.source>
     <maven.compile.target>1.5</maven.compile.target>
+    <commons.componentid>monitoring</commons.componentid>
+    <commons.jira.componentid>12312100</commons.jira.componentid>
   </properties>
   <reporting>
     <plugins>
