--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 
   <dependencies>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.3</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
@@ -167,6 +175,20 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <!-- to manually test the Web UI -->
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.7</version>
+        <configuration>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <webAppConfig>
+            <contextPath>/monitoring</contextPath>
+            <tempDirectory>${project.build.directory}/work</tempDirectory>
+          </webAppConfig>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <distributionManagement>
@@ -195,4 +217,5 @@
       </plugin>
     </plugins>
   </reporting>
+
 </project>
