Introduce Unit in counter and gauges to avoid incompatible data type Improve Renderer with Options for filtering and units Improve web UI
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@634228 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,21 @@
 
 <web-app>
 
+    <filter>
+        <filter-name>Monitoring</filter-name>
+        <filter-class>org.apache.commons.monitoring.servlet.MonitoringFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>Monitoring</filter-name>
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>Monitoring</filter-name>
+        <url-pattern>*.action</url-pattern>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>monitoring</servlet-name>
         <servlet-class>org.apache.commons.monitoring.reporting.web.WebUIServlet</servlet-class>
