--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>aopalliance</groupId>
+      <artifactId>aopalliance</artifactId>
+      <version>1.0</version>
+      <optional>true</optional>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -186,6 +192,7 @@
           <webAppConfig>
             <contextPath>/monitoring</contextPath>
             <tempDirectory>${project.build.directory}/work</tempDirectory>
+            <defaultsDescriptor>src/main/webapp/WEB-INF/webdefault.xml</defaultsDescriptor>
           </webAppConfig>
         </configuration>
       </plugin>
