fix broken tests
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@634923 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
     <url>http://svn.apache.org/viewvc/commons/sandbox/monitoring/trunk/</url>
   </scm>
   <build>
+  	<resources>
+  	  <resource>
+  	    <directory>${basedir}/src/main/resources</directory>
+  	  </resource>
+  	</resources>
     <plugins>
       <!-- TODO : investigate OSGi support
         <plugin>
