historization of repository based on a decorator : - complete Detachable interface - EmptyMonitor to avoid nullPointer - enhance Reporter to support detachable - Refactored MonitoringListener for webapps
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@645530 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,16 @@
 
 <web-app>
 
+    <context-param>
+        <description>enable monitoring history</description>
+        <param-name>org.apache.commons.monitoring.History</param-name>
+        <param-value>1min:10</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.apache.commons.monitoring.servlet.MonitoringListener</listener-class>
+    </listener>
+
     <filter>
         <filter-name>Monitoring</filter-name>
         <filter-class>org.apache.commons.monitoring.servlet.MonitoringFilter</filter-class>
