--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,7 @@
         <version>6.1.7</version>
         <configuration>
           <scanIntervalSeconds>10</scanIntervalSeconds>
+          <useTestClasspath>true</useTestClasspath>
           <webAppConfig>
             <contextPath>/monitoring</contextPath>
             <tempDirectory>${project.build.directory}/work</tempDirectory>
