COMMONSSITE-30 - fix the checkstyle configuration to work for multi-module and review/update <reporting> plugin version numbers for the poms being changed.  - pom's need to use ${basedir} for configuration files as the multi-module profile is run from commons-parent, so if not specified it can't find those files  - the checkstyle configuration file needs to use ${checkstyle.header.file} for the headerFile property and  <headerFile> element added to the plugin config in the pom.xml  - fix m1 checkstyle config to reflect the above where appropriate (specify header file property)
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@659747 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.3</version>
         <configuration>
           <targetJdk>1.5</targetJdk>
         </configuration>
