--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		                http://maven.apache.org/maven-v4_0_0.xsd">
+                    http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.commons</groupId>
@@ -85,6 +85,20 @@
       <version>2.3</version>
       <scope>test</scope>
     </dependency>
+    <!--
+    <dependency>
+      <groupId>javax.xml.ws</groupId>
+      <artifactId>jaxws-api</artifactId>
+      <version>2.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.soap</groupId>
+      <artifactId>saaj-api</artifactId>
+      <version>1.3</version>
+      <optional>true</optional>
+    </dependency>
+     -->
   </dependencies>
   <developers>
     <developer>
@@ -101,11 +115,11 @@
     <url>http://svn.apache.org/viewvc/commons/sandbox/monitoring/trunk/</url>
   </scm>
   <build>
-  	<resources>
-  	  <resource>
-  	    <directory>${basedir}/src/main/resources</directory>
-  	  </resource>
-  	</resources>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <!-- TODO : investigate OSGi support
         <plugin>
