--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,10 @@
     <artifactId>commons-sandbox-parent</artifactId>
     <version>7</version>
   </parent>
-  <artifactId>commons-monitoring</artifactId>
+  <groupId>org.apache.commons.monitoring</groupId>
+  <artifactId>commons-monitoring-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <name>Commons Monitoring (Sandbox)</name>
   <url>http://commons.apache.org/sandbox/monitoring/</url>
   <inceptionYear>2008</inceptionYear>
@@ -34,72 +35,12 @@
     Monitoring provides a simple, lightweight toolkit to instrument java application monitoring capabilities, including performances and thread concurrency.
   </description>
 
-  <dependencies>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.3</version>
-      <scope>provided</scope>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>aopalliance</groupId>
-      <artifactId>aopalliance</artifactId>
-      <version>1.0</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>2.5.3</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-aop</artifactId>
-      <version>2.5.3</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-proxy</artifactId>
-      <version>1.0</version>
-      <optional>true</optional>
-    </dependency>
+  <modules>
+    <module>core</module>
+    <module>instrumentation</module>
+    <module>spring</module>
+  </modules>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>1.4</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.3</version>
-      <scope>test</scope>
-    </dependency>
-    <!--
-    <dependency>
-      <groupId>javax.xml.ws</groupId>
-      <artifactId>jaxws-api</artifactId>
-      <version>2.0</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>javax.xml.soap</groupId>
-      <artifactId>saaj-api</artifactId>
-      <version>1.3</version>
-      <optional>true</optional>
-    </dependency>
-     -->
-  </dependencies>
   <developers>
     <developer>
       <id>nicolas</id>
@@ -109,133 +50,13 @@
       <timezone>+10</timezone>
     </developer>
   </developers>
+
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk/</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/commons/sandboxmonitoring/trunk/</developerConnection>
     <url>http://svn.apache.org/viewvc/commons/sandbox/monitoring/trunk/</url>
   </scm>
-  <build>
-    <resources>
-      <resource>
-        <directory>${basedir}/src/main/resources</directory>
-      </resource>
-    </resources>
-    <plugins>
-      <!-- TODO : investigate OSGi support
-        <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.2.0</version>
-        <extensions>true</extensions>
-        <configuration>
-        <excludeDependencies>true</excludeDependencies>
-        <instructions>
-        <Bundle-SymbolicName>org.apache.commons.monitoring</Bundle-SymbolicName>
-        <Export-Package>org.apache.commons.monitoring;version=${project.version}</Export-Package>
-        </instructions>
-        </configuration>
-        </plugin>
-      -->
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <excludes>
-            <!-- exclude classes required by backport version -->
-            <exclude>org/apache/commons/monitoring/support/java13/**</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.1</version>
-        <executions>
-          <execution>
-            <id>backport</id>
-            <phase>package</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <mkdir dir="${basedir}/target/backport" />
-                <java classname="net.sf.retrotranslator.transformer.Retrotranslator" failonerror="true">
-                  <classpath>
-                    <path refid="maven.plugin.classpath" />
-                    <path refid="maven.compile.classpath" />
-                  </classpath>
-                  <arg value="-smart" />
-                  <arg value="-srcdir" />
-                  <arg value="${basedir}/target/classes" />
-                  <arg value="-destdir" />
-                  <arg value="${basedir}/target/backport" />
-                  <arg value="-target" />
-                  <arg value="1.3" />
-                  <arg value="-backport" />
-                  <arg
- value="java.util.concurrent:edu.emory.mathcs.backport.java.util.concurrent;
-        java.lang.System.nanoTime:edu.emory.mathcs.backport.java.util.concurrent.helpers.Utils.nanoTime;
-        java.lang.StringBuilder:java.lang.StringBuffer;
-        org.apache.commons.monitoring.support.java13;" />
-                </java>
-              </tasks>
-            </configuration>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>net.sf.retrotranslator</groupId>
-            <artifactId>retrotranslator-transformer</artifactId>
-            <version>1.2.4</version>
-          </dependency>
-          <dependency>
-            <groupId>net.sf.retrotranslator</groupId>
-            <artifactId>retrotranslator-runtime</artifactId>
-            <version>1.2.4</version>
-          </dependency>
-          <dependency>
-            <groupId>backport-util-concurrent</groupId>
-            <artifactId>backport-util-concurrent</artifactId>
-            <version>3.1</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2-beta-1</version>
-        <executions>
-          <execution>
-            <id>backport</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attached</goal>
-            </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>src/assembly/backport.xml</descriptor>
-              </descriptors>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
 
-      <plugin>
-        <!-- to manually test the Web UI -->
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.7</version>
-        <configuration>
-          <scanIntervalSeconds>10</scanIntervalSeconds>
-          <useTestClasspath>true</useTestClasspath>
-          <webAppConfig>
-            <contextPath>/monitoring</contextPath>
-            <tempDirectory>${project.build.directory}/work</tempDirectory>
-            <defaultsDescriptor>src/main/webapp/WEB-INF/webdefault.xml</defaultsDescriptor>
-          </webAppConfig>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
   <distributionManagement>
     <site>
       <id>website</id>
@@ -258,7 +79,7 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>2.3</version>
         <configuration>
-          <targetJdk>1.5</targetJdk>
+          <targetJdk>${maven.compile.target}</targetJdk>
         </configuration>
       </plugin>
     </plugins>
