--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -12,5 +12,11 @@
   		<artifactId>commons-monitoring</artifactId>
   		<version>${project.version}</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.5</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
