--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -29,5 +29,18 @@
   		<artifactId>spring-aop</artifactId>
   		<version>2.5.5</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-web</artifactId>
+  		<version>2.5.5</version>
+  		<optional>true</optional>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>servlet-api</artifactId>
+  		<version>2.3</version>
+  		<scope>provided</scope>
+  		<optional>true</optional>
+  	</dependency>
   </dependencies>
 </project>
