--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>commons-monitoring-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>commons-monitoring</artifactId>
+  <artifactId>commons-monitoring-core</artifactId>
   <packaging>jar</packaging>
   <name>Commons Monitoring (Sandbox) core package</name>
   <dependencies>
