--- a/instrumentation/pom.xml
+++ b/instrumentation/pom.xml
@@ -9,29 +9,29 @@
   <artifactId>commons-monitoring-instrumentation</artifactId>
   <version>1.0-SNAPSHOT</version>
   <dependencies>
-  	<dependency>
-  		<groupId>org.apache.commons.monitoring</groupId>
-  		<artifactId>commons-monitoring</artifactId>
-  		<version>1.0-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-proxy</artifactId>
-  		<version>1.0</version>
-  		<optional>true</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>aopalliance</groupId>
-  		<artifactId>aopalliance</artifactId>
-  		<version>1.0</version>
-  		<optional>true</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>servlet-api</artifactId>
-  		<version>2.3</version>
-  		<scope>provided</scope>
-  		<optional>true</optional>
-  	</dependency>
+    <dependency>
+        <groupId>org.apache.commons.monitoring</groupId>
+        <artifactId>commons-monitoring-core</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-proxy</artifactId>
+      <version>1.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>aopalliance</groupId>
+      <artifactId>aopalliance</artifactId>
+      <version>1.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.3</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
