--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -7,16 +7,16 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-monitoring-reporting</artifactId>
   <dependencies>
-  	<dependency>
-  		<groupId>org.apache.commons.monitoring</groupId>
-  		<artifactId>commons-monitoring</artifactId>
-  		<version>${project.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.5</version>
-  		<scope>test</scope>
-  	</dependency>
+    <dependency>
+      <groupId>org.apache.commons.monitoring</groupId>
+      <artifactId>commons-monitoring-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.5</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
