--- a/instrumentation/pom.xml
+++ b/instrumentation/pom.xml
@@ -33,5 +33,11 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.cxf</groupId>
+    	<artifactId>cxf-rt-bindings-soap</artifactId>
+    	<version>2.1.3</version>
+    	<optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
