support for decorators in Spring configuration
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/branches/modules@761276 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -6,6 +6,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-monitoring-reporting</artifactId>
+  <name>Commons Monitoring (Sandbox) reporting</name>
   <dependencies>
     <dependency>
       <groupId>org.apache.commons.monitoring</groupId>
