--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -7,16 +7,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.commons.monitoring</groupId>
   <artifactId>commons-monitoring-spring</artifactId>
+  <name>Commons Monitoring (Sandbox) spring integration</name>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>2.5.5</version>
+      <version>2.5.6</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>2.5.5</version>
+      <version>2.5.6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons.monitoring</groupId>
@@ -31,12 +33,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
-      <version>2.5.5</version>
+      <version>2.5.6</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>2.5.5</version>
+      <version>2.5.6</version>
       <optional>true</optional>
     </dependency>
     <dependency>
