--- a/reporting/pom.xml
+++ b/reporting/pom.xml
@@ -19,5 +19,10 @@
       <version>4.5</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>xmlunit</groupId>
+    	<artifactId>xmlunit</artifactId>
+    	<version>1.2</version>
+    </dependency>
   </dependencies>
 </project>
