--- a/core/pom.xml
+++ b/core/pom.xml
@@ -35,9 +35,9 @@
   		<scope>test</scope>
   	</dependency>
   	<dependency>
-  		<groupId>commons-math</groupId>
+  		<groupId>org.apache.commons</groupId>
   		<artifactId>commons-math</artifactId>
-  		<version>1.2</version>
+  		<version>2.0</version>
   	</dependency>
   	<dependency>
   		<groupId>javax.servlet</groupId>
