basic gui + getting rid of visitable/visitor pattern for formats
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508066 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,8 @@
             <exclude>**/*/MANIFEST.MF</exclude>
             <exclude>.git</exclude>
             <exclude>.gitignore</exclude>
-            <exclude>**/webapp/js/*.js</exclude>
-            <exclude>**/webapp/css/*.css</exclude>
+            <exclude>**/webapp/resources/js/*.js</exclude>
+            <exclude>**/webapp/resources/css/*.css</exclude>
           </excludes>
         </configuration>
         <executions>
