adding basic plugin API
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508328 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
             <exclude>.gitignore</exclude>
             <exclude>**/webapp/resources/js/*.js</exclude>
             <exclude>**/webapp/resources/css/*.css</exclude>
+            <exclude>**/META-INF/services/*</exclude>
           </excludes>
         </configuration>
         <executions>
