move dependency to dptMngt in parent pom
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508414 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
         <artifactId>commons-monitoring-aop</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons.monitoring</groupId>
+        <artifactId>commons-monitoring-instrumentation</artifactId>
+        <version>${project.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
