adding jmx plugin + moving format in handler + using resources from classloader instead of sevletcontext to be able to embed the jar easily
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508808 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,8 @@
             <exclude>**/*/MANIFEST.MF</exclude>
             <exclude>.git</exclude>
             <exclude>.gitignore</exclude>
-            <exclude>**/webapp/resources/js/*.js</exclude>
-            <exclude>**/webapp/resources/css/*.css</exclude>
+            <exclude>**/resources/js/*.js</exclude>
+            <exclude>**/resources/css/*.css</exclude>
             <exclude>**/META-INF/services/*</exclude>
           </excludes>
         </configuration>
