getting rid of monitor (counter should be enough)
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1509169 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/web.xml
+++ b/src/site/xdoc/web.xml
@@ -46,7 +46,7 @@
             &lt;/filter-mapping&gt;
           </pre>
           Any incoming request will then be monitored and added to the repository.
-          The monitor name is the requested URI path, and the extension is used to select a category.
+          The counter name is the requested URI path, and the extension is used to select a category.
         </p>
       </subsection>
       <subsection name="MonitoringServlet">
