move dependency-reduced-pom.xml out of the scm tree
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1519545 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -57,6 +57,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
               <relocations>
                 <relocation>
                   <pattern>org.apache.commons.math</pattern>
