adding graphite module
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1530901 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     <module>jta</module>
     <module>web</module>
     <module>reporting</module>
+    <module>graphite</module>
   </modules>
 
   <developers>
