removing GaugeObserver and using DataStore API to write a GraphiteDataStore
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1531797 13f79535-47bb-0310-9956-ffa450edef68

--- a/graphite/src/test/resources/commons-monitoring.properties
+++ b/graphite/src/test/resources/commons-monitoring.properties
@@ -14,9 +14,9 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.commons.monitoring.graphite.period = 100
+org.apache.commons.monitoring.store.DataStore = org.apache.commons.monitoring.graphite.GraphiteDataStore
 
-org.apache.commons.monitoring.gauges.GaugeObserver = org.apache.commons.monitoring.graphite.GraphiteGaugeObserver
+org.apache.commons.monitoring.graphite.period = 100
 
 org.apache.commons.monitoring.graphite.GraphiteBuilder.address = localhost
 org.apache.commons.monitoring.graphite.GraphiteBuilder.port = 1234
