adding a cube module to push to square cube
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1532693 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <module>web</module>
     <module>reporting</module>
     <module>graphite</module>
+    <module>cube</module>
   </modules>
 
   <developers>
