Make it possible to have a different datastore for counter and gauge
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1533455 13f79535-47bb-0310-9956-ffa450edef68

--- a/graphite/src/test/resources/commons-monitoring.properties
+++ b/graphite/src/test/resources/commons-monitoring.properties
@@ -14,7 +14,7 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.commons.monitoring.store.DataStore = org.apache.commons.monitoring.graphite.GraphiteDataStore
+org.apache.commons.monitoring.store.DataStoreFactory = org.apache.commons.monitoring.graphite.GraphiteDataStoreFactory
 
 org.apache.commons.monitoring.graphite.period = 100
 
