--- a/cube/src/test/resources/commons-monitoring.properties
+++ b/cube/src/test/resources/commons-monitoring.properties
@@ -14,6 +14,7 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-org.apache.commons.monitoring.store.DataStore = org.apache.commons.monitoring.cube.CubeDataStore
+org.apache.commons.monitoring.store.DataStoreFactory = org.apache.commons.monitoring.cube.CubeDataStoreFactory
 org.apache.commons.monitoring.cube.period = 100
 org.apache.commons.monitoring.cube.CubeBuilder.collector = http://localhost:1234/1.0/event/put
+
