adding jpa module - doc todo
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1534546 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>graphite</module>
     <module>cube</module>
     <module>collector</module>
+    <module>jpa</module>
   </modules>
 
   <developers>
@@ -160,6 +161,12 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.11</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>2.2.9</version>
         <scope>test</scope>
       </dependency>
       <dependency>
