--- a/aop/pom.xml
+++ b/aop/pom.xml
@@ -21,7 +21,7 @@
 
   <parent>
     <artifactId>commons-monitoring-parent</artifactId>
-    <groupId>org.apache.commons.monitoring</groupId>
+    <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
@@ -31,7 +31,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.commons.monitoring</groupId>
+      <groupId>org.apache.sirona</groupId>
       <artifactId>commons-monitoring-core</artifactId>
     </dependency>
     <dependency>
