--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,7 +21,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.commons.monitoring</groupId>
+    <groupId>org.apache.sirona</groupId>
     <artifactId>commons-monitoring-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
