--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -21,7 +21,7 @@
 
   <parent>
     <artifactId>commons-monitoring-parent</artifactId>
-    <groupId>org.apache.commons.monitoring</groupId>
+    <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
@@ -37,11 +37,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons.monitoring</groupId>
+      <groupId>org.apache.sirona</groupId>
       <artifactId>commons-monitoring-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons.monitoring</groupId>
+      <groupId>org.apache.sirona</groupId>
       <artifactId>commons-monitoring-aop</artifactId>
       <exclusions>
         <exclusion>
