--- a/web/pom.xml
+++ b/web/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>commons-monitoring-parent</artifactId>
-    <groupId>org.apache.commons.monitoring</groupId>
+    <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
@@ -42,7 +42,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.commons.monitoring</groupId>
+      <groupId>org.apache.sirona</groupId>
       <artifactId>commons-monitoring-core</artifactId>
     </dependency>
   </dependencies>
