--- a/aspectj/pom.xml
+++ b/aspectj/pom.xml
@@ -19,14 +19,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>commons-monitoring-parent</artifactId>
+    <artifactId>sirona-parent</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>commons-monitoring-aspectj</artifactId>
+  <artifactId>sirona-aspectj</artifactId>
   <name>Commons Monitoring (Sandbox) :: AspectJ Integration</name>
 
   <properties>
@@ -41,7 +41,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>commons-monitoring-aop</artifactId>
+      <artifactId>sirona-aop</artifactId>
     </dependency>
 
     <dependency>
