--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -19,14 +19,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>commons-monitoring-parent</artifactId>
+    <artifactId>sirona-parent</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>commons-monitoring-collector</artifactId>
+  <artifactId>sirona-collector</artifactId>
   <name>Commons Monitoring (Sandbox) :: Collector</name>
 
   <dependencies>
@@ -37,7 +37,7 @@
 
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>commons-monitoring-core</artifactId>
+      <artifactId>sirona-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -48,7 +48,7 @@
 
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>commons-monitoring-cube</artifactId>
+      <artifactId>sirona-cube</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
