--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -18,12 +18,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <artifactId>commons-monitoring-parent</artifactId>
+    <artifactId>sirona-parent</artifactId>
     <groupId>org.apache.sirona</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>commons-monitoring-spring</artifactId>
+  <artifactId>sirona-spring</artifactId>
   <name>Commons Monitoring (Sandbox) :: Spring Integration</name>
 
   <properties>
@@ -38,11 +38,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>commons-monitoring-core</artifactId>
+      <artifactId>sirona-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>commons-monitoring-aop</artifactId>
+      <artifactId>sirona-aop</artifactId>
     </dependency>
     <dependency>
       <groupId>aopalliance</groupId>
